<resources>
    <string name="app_name">MyTemplate</string>
    <string name="splash_logo1">Weather</string>
    <string name="splash_logo2">Forcast</string>

    <!-- Common word -->
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="send">Send</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="agree">Agree</string>
    <string name="refuse">Refuse</string>
    <string name="do_install">Install</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="modify">Modify</string>
    <string name="close">Close</string>
    <string name="next">Next</string>
    <string name="no_name">NoName</string>
    <string name="all">All</string>
    <string name="error">Error</string>

    <!-- Common message -->
    <string name="app_finish_message">"If click 'Back' twice, app will be closed."</string>
    <string name="pms_des">If you want to use this, please allow this permission.</string>
    <string name="ready_service">Service is ready.</string>
    <string name="not_supported_feature">This feature is not supported.</string>

    <!-- Error message -->
    <string name="error_message_default">Something went wrong!</string>
    <string name="error_title_permission_not_granted">Error with Permission</string>
    <string name="error_message_permission_not_granted">Permission is not granted!\nPlease grant the permission to continue to using app!</string>
    <string name="error_title_http">Error with HTTP</string>
    <string name="error_title_http_object">Error with HTTP object</string>
    <string name="error_message_http">Code: %1$d\nUrl: %2$s</string>
    <string name="error_message_network">Error with Network</string>
    <string name="error_message_preferences">Error with Preferences</string>
    <string name="error_message_params_null">The params in %1$s must non-null.</string>
    <string name="error_message_current_location_is_null">Cannot get the current location!</string>
    <string name="error_message_current_address_is_not_found">Cannot get the current address!</string>
    <string name="error_message_address_is_not_found">Cannot get the address!</string>
    <string name="error_message_city_is_invalid">City is invalid!</string>
    <string name="error_message_lat_lng_are_invalid">Latitude and Longitude are invalid!</string>
    <string name="error_message_ssl_cert_invalid">Would you move to the unsafe web page?</string>

    <!-- Time message -->
    <string name="just">Just Ago</string>
    <string name="second_age_format">%ds ago</string>
    <string name="minute_age_format">%dm ago</string>
    <string name="hour_age_format">%dh ago</string>
    <string name="day_age_format">%dd agao</string>
    <string name="month_age_format">%dmonth ago</string>
    <string name="year_age_format">%dyear ago</string>
    <string name="hour">시</string>
    <string-array name="week">
        <item>SUN</item>
        <item>MON</item>
        <item>TUE</item>
        <item>WEN</item>
        <item>THU</item>
        <item>FRI</item>
        <item>SAT</item>
    </string-array>

    <!--MediaManager-->
    <string name="photo">Photo</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="delete">Delete</string>
    <string name="photo_max_size">Storage is 5MB over.</string>

    <!-- Buttons -->
    <string name="retry">Retry</string>
    <string name="skip">Skip</string>

    <!-- Login -->
    <string name="login">Login</string>
    <string name="id">Email</string>
    <string name="pwd">Password</string>
    <string name="pwd_confirm">Password\nConfirm</string>
    <string name="hint_id">It is id.</string>
    <string name="hint_pwd">Input your password.</string>
    <string name="hint_pwd_confirm">Input your password again.</string>
    <string name="hint_motto">Input your motto.</string>
    <string name="signup">Sign up</string>
    <string name="to_main">SignInGuest</string>
    <string name="to_ask">Do Ask</string>
    <string name="input_valid_email">Please input valid email.</string>
    <string name="input_valid_pwd">Please input valid pasword.</string>
    <string name="motto">Motto</string>
    <string name="msg_no_login_user">No Account! Please sign up again!</string>

    <!-- Main -->
    <string name="tab_basic">Basic</string>
    <string name="tab_latest">Latest</string>
    <string name="tab_special">Special</string>
    <string-array name="arr_main_tech">
        <item>Menu</item>
        <item>Animation</item>
        <item>Camera</item>
        <item>Gallery</item>
        <item>Download</item>
    </string-array>
    <string-array name="arr_recent_tech">
        <item>WorkManager</item>
        <item>AlarmManager</item>
        <item>PictureInPicture</item>
        <item>Compose</item>
        <item>Hilt</item>
    </string-array>
    <string-array name="arr_special_tech">
        <item>Bluetooth</item>
        <item>Calendar</item>
    </string-array>
    <string name="hint_search">Input your search word.</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>

    <!-- Tuto -->
    <string-array name="arr_tuto_title">
        <item>Detailed Hourly\nForecast</item>
        <item>Real-Time\nWeather Map</item>
        <item>Weather Around\nthe World</item>
        <item>Detailed Hourly\nForecast</item>
    </string-array>
    <string-array name="arr_tuto_content">
        <item>Get in - depth weather\ninformation.</item>
        <item>Watch the progress of the\nprecipitation to stay informed</item>
        <item>Add any location you want and\nswipe easily to chnage.</item>
        <item>Get in - depth weather\ninformation.</item>
    </string-array>

    <!-- Setting -->
    <string name="setting">Setting</string>
    <string name="alarm">Alarm</string>
    <string name="use_agreement">UseAgreement</string>
    <string name="signout">Signout</string>
    <string name="ver">Version</string>
    <string name="msg_signout">Are you sure to sign out?\nAfter sign out, you cannot restore your data.</string>
    <string name="title_activity_main2">MainActivity2</string>
</resources>