<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".app.user.LoginActivity">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewmodel"
            type="com.victoria.bleled.app.user.UserViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/common_bg">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/ll_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_24"
                    android:layout_marginRight="@dimen/spacing_24"
                    android:layout_marginTop="@dimen/spacing_126"
                    android:text="@string/app_name"
                    android:textAlignment="center"
                    android:gravity="center_horizontal"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_32"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginEnd="18dp"
                    android:layout_marginTop="@dimen/spacing_80"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView3">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/spacing_50"
                        android:background="@drawable/xml_common_bg_white_round_4"
                        android:orientation="horizontal"
                        android:paddingLeft="@dimen/spacing_8"
                        android:paddingRight="@dimen/spacing_8"
                        android:layout_marginTop="10dp">

                        <TextView
                            style="@style/LoginLabelText"
                            android:layout_width="100dp"
                            android:layout_height="match_parent"
                            android:text="@string/id" />

                        <EditText
                            android:id="@+id/et_id"
                            style="@style/LoginEditText"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="textEmailAddress"
                            android:hint="@string/hint_id"
                            android:text="@={viewmodel.id}"/>
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/spacing_50"
                        android:background="@drawable/xml_common_bg_white_round_4"
                        android:orientation="horizontal"
                        android:paddingLeft="@dimen/spacing_8"
                        android:paddingRight="@dimen/spacing_8"
                        android:layout_marginTop="10dp">

                        <TextView
                            style="@style/LoginLabelText"
                            android:layout_width="100dp"
                            android:layout_height="match_parent"
                            android:text="@string/pwd" />

                        <EditText
                            android:id="@+id/et_pwd"
                            style="@style/LoginEditText"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:hint="@string/hint_pwd"
                            android:inputType="textPassword"
                            android:text="@={viewmodel.pwd}"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <Button
                                android:id="@+id/btn_login"
                                style="@style/LoginButton"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="5dp"
                                android:layout_weight="1"
                                android:text="@string/login"
                                android:onClick="@{() -> viewmodel.loginUser()}"/>

                            <Button
                                android:id="@+id/btn_signup"
                                style="@style/LoginButton"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:layout_weight="1"
                                android:text="@string/signup" />
                        </LinearLayout>

                        <Button
                            android:id="@+id/btn_main"
                            style="@style/LoginButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/to_main" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/btn_ask"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:background="@color/transparent"
                        android:text="@string/to_ask"
                        android:textColor="@color/white"
                        android:textSize="@dimen/font_14" />

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>