<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".app.auth.SignupActivity">

    <data>
        <import type="android.view.View"/>
        <import type="com.mario.template.R"/>
        <variable
            name="viewmodel"
            type="com.mario.template.ui.auth.SignupViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/ib_back"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/transparent"
                android:src="@drawable/btn_back" />

            <TextView
                android:id="@+id/tv_title"
                style="@style/ActionBarTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/signup" />
        </RelativeLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

            <com.mario.lib.base.view.imageview.CircleImageView
                android:id="@+id/iv_photo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@mipmap/ic_launcher"
                placeholder="@{R.mipmap.ic_launcher}"
                imageUrl="@{viewmodel.profile.file_url}"/>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_photo">

                <LinearLayout
                    android:id="@+id/ll_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/spacing_24"
                    android:paddingTop="@dimen/spacing_32"
                    android:paddingRight="@dimen/spacing_24"
                    android:paddingBottom="@dimen/spacing_32">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/spacing_50"
                        android:background="@drawable/xml_common_edit_bg"
                        android:orientation="horizontal"
                        android:padding="@dimen/spacing_8">

                        <TextView
                            style="@style/LoginLabelText"
                            android:layout_width="100dp"
                            android:layout_height="match_parent"
                            android:text="@string/id"/>

                        <EditText
                            android:id="@+id/et_id"
                            style="@style/LoginEditText"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:hint="@string/hint_id"
                            android:inputType="textEmailAddress"
                            android:text="@={viewmodel.id}"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/spacing_50"
                        android:layout_marginTop="@dimen/spacing_16"
                        android:background="@drawable/xml_common_edit_bg"
                        android:orientation="horizontal"
                        android:padding="@dimen/spacing_8">

                        <TextView
                            style="@style/LoginLabelText"
                            android:layout_width="100dp"
                            android:layout_height="match_parent"
                            android:text="@string/pwd"/>

                        <EditText
                            android:id="@+id/et_pwd"
                            style="@style/LoginEditText"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:hint="@string/hint_pwd"
                            android:inputType="textPassword"
                            android:text="@={viewmodel.pwd}"/>
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/spacing_50"
                        android:layout_marginTop="@dimen/spacing_16"
                        android:background="@drawable/xml_common_edit_bg"
                        android:orientation="horizontal"
                        android:padding="@dimen/spacing_8">

                        <TextView
                            style="@style/LoginLabelText"
                            android:layout_width="100dp"
                            android:layout_height="match_parent"
                            android:text="@string/pwd_confirm"
                            android:lineSpacingExtra="-3dp"/>

                        <EditText
                            android:id="@+id/et_pwd_confrim"
                            style="@style/LoginEditText"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:inputType="textPassword"
                            android:gravity="center_vertical"
                            android:hint="@string/hint_pwd_confirm"
                            android:text="@={viewmodel.pwdConfirm}"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/spacing_50"
                        android:layout_marginTop="@dimen/spacing_16"
                        android:background="@drawable/xml_common_edit_bg"
                        android:orientation="horizontal"
                        android:padding="@dimen/spacing_8">

                        <TextView
                            style="@style/LoginLabelText"
                            android:layout_width="100dp"
                            android:layout_height="match_parent"
                            android:text="@string/motto" />

                        <EditText
                            android:id="@+id/et_motto"
                            style="@style/LoginEditText"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:hint="@string/hint_motto"
                            android:inputType="text"
                            android:text="@={viewmodel.motto}"/>
                    </LinearLayout>

                    <Button
                        android:id="@+id/btn_signup"
                        style="@style/SignupButton"
                        android:layout_width="@dimen/spacing_140"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/spacing_24"
                        android:text="@string/signup"
                        android:onClick="@{v -> viewmodel.signupUser()}"/>

                </LinearLayout>
            </ScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>