<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.more.SettingActivity">

    <androidx.appcompat.widget.Toolbar
        app:theme="@style/DefaultToolbarTheme"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:contentInsetStartWithNavigation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_scrollFlags="scroll|enterAlways|snap"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleMarginStart="0dp"
        app:titleTextColor="@color/white" >
        <TextView
            style="@style/ActionBarTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            android:layout_gravity="center"
            android:id="@+id/toolbar_title" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="@dimen/activity_horizontal_margin"
                android:paddingHorizontal="@dimen/activity_vertical_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/ListTitleText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/alarm" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/iv_vibrate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onAlarm"
                    android:background="@drawable/xml_common_edit_bg"
                    android:src="@drawable/xml_checkbox_selector" />
            </LinearLayout>

            <View style="@style/DividerView" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:onClick="onAgreement"
                android:paddingVertical="@dimen/activity_horizontal_margin"
                android:paddingHorizontal="@dimen/activity_vertical_margin">

                <TextView
                    style="@style/ListTitleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/use_agreement" />
            </LinearLayout>

            <View style="@style/DividerView" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="@dimen/activity_horizontal_margin"
                android:paddingHorizontal="@dimen/activity_vertical_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/ListTitleText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ver" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_ver"
                    style="@style/ListTitleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1.0" />
            </LinearLayout>
            <View style="@style/DividerView" />
        </LinearLayout>

        <Button
            style="@style/ListTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signout"
            android:textColor="@color/colorAccent"
            android:background="@color/transparent"
            android:onClick="onSignout"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>