<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/rl_bg"
            style="@style/DialogBg" />

        <LinearLayout
            android:id="@+id/ll_content"
            style="@style/DialogContent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="@dimen/spacing_12"
                    android:paddingBottom="@dimen/spacing_12"
                    android:text="@string/app_name"
                    android:textColor="@color/dlg_title"
                    android:textSize="@dimen/spacing_18"
                    android:visibility="gone" />

                <View
                    android:id="@+id/v_divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:visibility="gone"
                    android:background="@color/divider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/spacing_16">

                    <TextView
                        android:id="@+id/tv_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/font_13"
                        android:gravity="center"
                        android:textColor="@color/dlg_title"
                        android:paddingTop="@dimen/spacing_20"
                        android:paddingBottom="@dimen/spacing_20"
                        android:text="@string/send" />

                    <LinearLayout
                        android:id="@+id/lly_btns"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_16"
                        android:visibility="gone"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_cancel"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_marginRight="@dimen/spacing_4"
                            android:layout_weight="1"
                            android:background="@drawable/xml_round_btn_cancel"
                            android:gravity="center"
                            android:text="@string/cancel"
                            android:visibility="gone"
                            android:textColor="@color/common_text" />

                        <TextView
                            android:id="@+id/tv_confirm"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_marginLeft="@dimen/spacing_4"
                            android:layout_weight="1"
                            android:background="@drawable/xml_round_btn_ok"
                            android:gravity="center"
                            android:text="@string/send"
                            android:visibility="gone"
                            android:textColor="@color/white" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</layout>